--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: ${{ github.ref }}  # Use the tag as the release name
+          name: Release ${{ github.ref_name }}
           body: ${{ steps.changelog.outputs.changelog }}  # Attach changelog
